--- a/index.html
+++ b/index.html
@@ -1,8 +1,31 @@
-<!DOCTYPE html>
-<div id="container"></div>
-<script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
-<script type="module">
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>a1-ghd3</title>
 
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 20px;
+    }
+    svg {
+      border: 2px solid #333;
+      display: block;
+    }
+  </style>
+</head>
+
+<body>
+
+  <h2>D3 Shapes</h2>
+  <div id="container"></div>
+
+<!-- Load d3 -->
+<script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
+
+  
 <script>
   console.log(d3); // test if d3 is loaded
   //SVG 
