--- a/index.html
+++ b/index.html
@@ -12,13 +12,34 @@
   <script>
     console.log("D3 loaded:", typeof d3 !== "undefined");
 
-    // SVG
+    //SVG
     const svg = d3.select("#container")
       .append("svg")
       .attr("width", 600)
       .attr("height", 400);
 
-    // rectangle (click)
+    //circle (hover and transition)
+    const circle = svg.append("circle")
+      .attr("cx", 250)
+      .attr("cy", 120)
+      .attr("r", 20)
+      .attr("fill", "red")
+      .on("mouseover", function () {
+        d3.select(this)
+          .transition()
+          .duration(300)
+          .attr("fill", "orange")
+          .attr("r", 30);
+      })
+      .on("mouseout", function () {
+        d3.select(this)
+          .transition()
+          .duration(300)
+          .attr("fill", "red")
+          .attr("r", 20);
+      });
+
+    //rectangle (click + linked interaction)
     svg.append("rect")
       .attr("x", 50)
       .attr("y", 50)
@@ -28,28 +49,18 @@
       .style("cursor", "pointer")
       .on("click", function () {
         const current = d3.select(this).attr("fill");
+
         d3.select(this)
           .attr("fill", current === "blue" ? "purple" : "blue");
+
+        /linked interaction
+        circle
+          .transition()
+          .duration(300)
+          .attr("fill", current === "blue" ? "green" : "red");
       });
 
-    // circle (hover)
-    svg.append("circle")
-      .attr("cx", 250)
-      .attr("cy", 120)
-      .attr("r", 20)
-      .attr("fill", "red")
-      .on("mouseover", function () {
-        d3.select(this)
-          .attr("fill", "orange")
-          .attr("r", 30);
-      })
-      .on("mouseout", function () {
-        d3.select(this)
-          .attr("fill", "red")
-          .attr("r", 20);
-      });
-
-    // line
+    //line
     svg.append("line")
       .attr("x1", 50)
       .attr("y1", 200)
@@ -58,10 +69,18 @@
       .attr("stroke", "green")
       .attr("stroke-width", 3);
 
-    // polygon
+    //polygon
     svg.append("polygon")
       .attr("points", "400,50 450,150 350,150")
       .attr("fill", "pink");
+
+    //text (additional shape)
+    svg.append("text")
+      .attr("x", 20)
+      .attr("y", 30)
+      .text("D3 Shapes & Interaction Demo")
+      .attr("font-size", "18px")
+      .attr("fill", "black");
   </script>
 
 </body>
