--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     svg.append("text")
       .attr("x", 20)
       .attr("y", 30)
-      .text("D3 Shapes & Interaction Demo")
+      .text("D3 Shapes &amp; Interaction Demo")
       .attr("font-size", "18px")
       .attr("fill", "black");
   </script>
