--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         d3.select(this)
           .attr("fill", current === "blue" ? "purple" : "blue");
 
-        /linked interaction
+        //linked interaction
         circle
           .transition()
           .duration(300)
